--- a/docs/Tips/チーム内ドキュメント.md
+++ b/docs/Tips/チーム内ドキュメント.md
@@ -9,3 +9,4 @@ has_children: true
 - [チーム規約](https://github.com/RM-NAGOYASHACHIHOKO/Team_Rules/blob/main/%E3%83%81%E3%83%BC%E3%83%A0%E8%A6%8F%E7%B4%84.md)
 - [会計規約](https://github.com/RM-NAGOYASHACHIHOKO/Team_Rules/blob/main/%E4%BC%9A%E8%A8%88%E8%A6%8F%E7%B4%84.md)
 - [物品購入の手順](https://github.com/RM-NAGOYASHACHIHOKO/Private_Document/blob/main/%E4%BC%9A%E8%A8%88/%E8%B3%BC%E5%85%A5%E6%89%8B%E9%A0%86.md)
+- [写真・動画置き場](https://github.com/RM-NAGOYASHACHIHOKO/Private_Document/blob/main/%E5%BA%83%E5%A0%B1/%E5%86%99%E7%9C%9F%E3%83%BB%E5%8B%95%E7%94%BB%E7%BD%AE%E3%81%8D%E5%A0%B4.md)  
